--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@gradio/client": "^1.0.0",
+    "@gradio/client": "^1.3.0",
+    "node-fetch": "^3.3.2",
+    "fs": "0.0.1-security",
     "path": "0.12.7",
     "os": "0.1.2",
-    "fs": "0.0.1-security",
+    "buffer": "6.0.3",
     "url": "0.11.4",
     "next": "16.0.3",
     "react": "19.2.0",
