--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virtual-tryon-widget",
   "version": "1.0.0",
-  "description": "Embeddable Virtual Try-On Widget with Hugging Face API",
+  "description": "Embeddable Virtual Try-On Widget with Hugging Face Gradio",
   "type": "module",
   "main": "server.js",
   "scripts": {
@@ -19,13 +19,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "@gradio/client": "^1.3.0",
-    "node-fetch": "^3.3.2",
-    "fs": "0.0.1-security",
+    "form-data": "^4.0.5",
     "path": "0.12.7",
     "os": "0.1.2",
-    "buffer": "6.0.3",
+    "fs": "0.0.1-security",
     "url": "0.11.4",
     "next": "16.0.3",
     "react": "19.2.0",
@@ -37,7 +36,7 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
     "@types/node": "24.10.1",
     "tailwindcss": "4.1.17",
