--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "version": 2,
   "buildCommand": "echo 'Build complete'",
-  "public": true
+  "env": {
+    "HF_TOKEN": "@hf_token"
+  },
+  "public": true,
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ]
 }
