--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@gradio/client": "^1.0.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@gradio/client": "^1.0.0",
-    "node-fetch": "^3.4.0" ,
-    "path": "0.12.7",
-    "os": "0.1.2",
+    "express": "^4.18.2",
     "fs": "0.0.1-security",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "os": "0.1.2",
+    "path": "0.12.7",
     "url": "0.11.4"
   }
 }
